# lackey

./: .pre-commit-config.yaml  CLAUDE.md  DEPLOYMENT_GUIDE.md  DESIGN.md  Dockerfile  Makefile  README.md  entrypoint.sh  pyproject.toml
.lackey/: Dockerfile
.lackey/blueprints/: execute-and-test.yaml  scope-execute-test.yaml
example/: Dockerfile.minion
src/lackey/: __main__.py  blueprint.py  minion.py  models.py  run.py
src/lackey/agents/: __init__.py  _deps.py  _tools.py  executor.py  fixer.py  scoper.py
src/lackey/backends/: __init__.py  base.py  cloud.py  local.py
src/lackey/cloud/: __init__.py  config.py  ecr.py  ecs.py  github_token.py  pr.py  s3.py  upload.py
tests/: __init__.py  test_hello.py  test_hello_world.py
